
commits
-------

o   Jeremy Allison <jra@samba.org>
    * Fixes for various Klocwork defect reports.
    * Cleanup pdb_get_XXX() methods and ensure that a failure
      to allocate memory for a samu user structure is reported 
      as a failure to the calling function.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix 'make install' problem when building outside source/.


o   Guenther Deschner <gd@samba.org>
    * Fix memleaks in winbindd ads searches.
    * Fix timestamp bug in pam_winbindd which forced users to change
      passwords prematurelty.
    * Small debug message cleanups.


o   Volker Lendecke <vl@samba.org>
    * Fixes for various Klocwork defect reports.
    * Fixes for two Coverity defect reports.


o   Jason Mader <jason@ncac.gwu.edu>
    * Compiler warning fixes.


Release Notes for older release follow:

      --------------------------------------------------
                   =================================
                   Release Notes for Samba 3.0.23rc2
                              Jun 9, 2006
                   =================================

Thanks very much to those people who spent time testing the RC1 
release and reported their findings.  We would like to especially 
thank Thomas Bork <tombork@web.de> for his numerous reports. 
We believe that RC2 is in much better shape in a large part due 
to his efforts.

We would also like to thank the developers of Klocwork for their
analysis of the Samba source tree.  This release candidate includes 
multiple fixes based on reports from the Klocwork code analyzer.

Common issues addressed in 3.0.23rc2 include:

   o Winbindd & Samba PDC integration issues.
   o Join problems from Windows clients in a Samba domain.
   o Winbind & AD trust failures.


Group Mapping Changes
=====================

The default mapping entries for groups such as "Domain Admins"
are no longer created when using an smbpasswd file or a tdbsam passdb 